[package]
name = "replayer-be"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["retry"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.2"
solana-keypair = "3.1.0"
base64 = "0.22.1"
uuid = { version = "1.21.0", features = ["v6"] }
aes-gcm = "0.10.3"
chrono = "0.4.43"
solana-client = "3.1.8"
mpl-core = "0.11.1"
